implement the spring Data rest with the new api that removes the services class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.main.banner-mode=off
 
 logging.level.root = warn
+
+spring.data.rest.base-path=/api
