--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.main.banner-mode=off
 
 logging.level.root = warn
 
-spring.data.rest.base-path=/api
+spring.security.user.name=tony
+spring.security.user.password=1234
+#spring.data.rest.base-path=/api
