included security features to our spring applications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.main.banner-mode=off
 
 logging.level.root = warn
 
-spring.security.user.name=tony
-spring.security.user.password=1234
+#spring.security.user.name=tony
+#spring.security.user.password=1234
 #spring.data.rest.base-path=/api
