--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=cruddemo
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/hb_05_many_to_many
+spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.hibernate.SQL=trace
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
+#logging.level.org.hibernate.SQL=trace
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 spring.main.banner-mode=off
 
-logging.level.root = warn
+#logging.level.root = warn
 
 #spring.security.user.name=tony
 #spring.security.user.password=1234
 #spring.data.rest.base-path=/api
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
